fdo#77123: Add option ignore kashida to the search

This patch will add new checkbox to ignore kashida in the
search and replace dialog.

Change-Id: I9e7179242751103b8418d922ade5b9145170ad15